# learn_cv

./: .gitignore  AGENTS.md  colab.ipynb  colab_startup.py  pyproject.toml  test.ipynb
base/: config.py  model.py
cifar/: config.py  constants.py  experiment.yaml  load_data.py  main.py  utils.py
cifar/fine_tune/: config.py  constants.py  experiment.yaml  experiment_dry.yaml  load_data.py  main.py  training.py
cifar/fine_tune/utils/: fine_tuning.py  training.py
cifar/from_scratch/: config.py  constants.py  experiment.yaml  load_data.py  main.py
cifar/from_scratch/utils/: load_data.py  training.py
cifar/utils/: dataset.py
core/: augmentations.py  config.py  eval_utils.py  fine_tuning.py  io.py  train_utils.py  training.py
fashion_mnist/: colab_startup.ipynb  config.py  constants.py  experiment.yaml  load_data.py  main.py  model.py  utils.py
fashion_mnist/utils/: load_data.py  training.py
mnist/: config.py  constants.py  experiment.yaml  load_data.py  main.py  model.py  test.ipynb  train_utils.py  utils.py
mnist/utils/: training.py
models/: cnn.py  config.py  object_detection.py  resnet.py
pets/: config.py  constants.py  dataset.py  experiment.yaml  get_data.py  load_data.py  main.py  process_data.py  train.py
pets/utils/: data.py  load_data.py  training.py  viz.py
tests/: test_base.py  test_cifar.py  test_config.yaml  test_core.py  test_fashion_mnist.py  test_loss.py  test_mnist.py  test_resnet.py  test_utils.py  test_viz.py
utils/: __init__.py  augmentation_utils.py  general_utils.py  img_utils.py  loss_functions.py  train_utils.py
