[project]
name = "learn-cv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.8.5",
    "matplotlib>=3.10.9",
    "pandas>=3.0.2",
    "polars>=1.40.1",
    "tensorboard>=2.20.0",
    "torch>=2.11.0",
    "torchsummary>=1.5.1",
    "torchvision>=0.26.0",
]

[dependency-groups]
dev = [
    "ipython>=9.13.0",
    "jupyterlab>=4.5.7",
]
